--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             <p class="header-description">
                  There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words
             </p>
-            <button class="btn-primary">Contact As</button>
+            <button class="btn-primary">Contact Us</button>
         </div>
     </header>
 
-    <!-- header area-end -->
+<!-- profile are -->
 
     <main>
         <section class="profile" >
@@ -72,10 +72,36 @@
         </div>
 
         </section>
+        <!-- contact-area -->
+        <section class="contact">
+            <h1>Awlays keep a positive <br> mindset</h1>
+            <button class="btn-contact">Call Now</button>
+    </section>
     </main>
-
-    <footer>
-            <button class="btn-footer">Contact Me</button>
+<!-- footer-area -->
+    <footer class="footer-area">
+        <div class="footer-item">
+                <h2 class="footer-title">Future</h2>
+                <p class="footer-description">There are many variations of passages of Lorem Ipsum 
+                    available, but the majority have suffered alteration in some 
+                    form, by injected humour, or randomised words
+                </p>
+                <p>Email:mainkhan1999@gmail.com</p>
+                <br>
+                <p>phone:01865899810</p>
+                <div class="icon">
+                    <a href=""><img src="./images/icons/fb.png" alt=""></a>
+                    <a href=""><img src="./images/icons/twitter.png" alt=""></a>
+                    <a href=""><img src="./images/icons/youtube.png" alt=""></a>
+                </div>
+        </div>
+        <div class="footer-item">
+            <h2 class="subscribe">subscribe</h2>
+            <input  type="email"placeholder=" Enter Your Email">
+            <button>Subscribe</button>
+        </div>
     </footer>
+
+    
 </body>
 </html>
