--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 
     <header class="header">
         <div class="header-text">
-        <h1 class="header-title">
-            All Thinks Are Possible If You believe </h1>
+        <h1 class="header-title">All Thinks Are Possible If You believe </h1>
             <p class="header-description">
                  There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words
             </p>
@@ -22,7 +21,7 @@
         </div>
     </header>
 
-<!-- profile are -->
+<!-- profile area -->
 
     <main>
         <section class="profile" >
